@@ -9,8 +9,8 @@
      data-url-lizard-map-snippet-add="{% url lizard_map_session_collage_snippet_add %}"
      data-url-lizard-map-snippet-delete="{% url lizard_map_session_collage_snippet_delete %}"
      data-url-lizard-map-session-workspace-add-item-temp="{% url lizard_map_session_workspace_add_item_temp %}"
-     data-url-lizard-map-collage-popup="{% url lizard_map_collage_popup %}"
-     data-url-lizard-map-snippet-popup="{% url krw_waternet_snippet %}"
+     data-url-lizard-map-collage-popup="{% url lizard_map.collage_popup %}"
+     data-url-lizard-map-snippet-popup="{% url lizard_map.snippet_popup %}"
      >
   <h2>
     {{ workspace.name }}
